# mandvmodeling

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setversion.py
mandvmodeling/: __init__.py  _version.py
mandvmodeling/core/: __init__.py  estimator.py  schemas.py
mandvmodeling/core/calc/: __init__.py  bounds.py  init_guesses.py
mandvmodeling/core/calc/bounds/: __init__.py  base.py  daily_bounds.py  default_bounds.py
mandvmodeling/core/plotly_plotting/: __init__.py  derive_model_coordinates.py  model_coordinates_parsers.py
mandvmodeling/core/plotly_plotting/base/: __init__.py  coordinates.py  plotly_parameters.py
mandvmodeling/core/pmodels/: __init__.py  base.py  parameter_model.py
tests/: __init__.py  conftest.py  test_estimator.py  test_estimator_integration_daily.py  test_lib_daily_bounds.py  test_lib_init_guesses.py  test_parameter_models.py  test_savings_integration_daily.py  test_schemas.py  test_sklearn_interop.py
tests/fixtures/: generated_data_all_models.json
