[tool.poetry]
name = "mandvmodeling"
version = "1.1.3"
description = "Energy changepoint modeling using changepointmodel and plotting using Plotly"
authors = ["cunybpl <dev@cunybpl.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4"
pydantic = "^2.8.2"
pytest = "^8.3.2"
changepointmodel = {git = "https://github.com/cunybpl/changepointmodel.git"}
ruff = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
